--- a/Отчёт.md
+++ b/Отчёт.md
@@ -1,2 +1,12 @@
 # Отчёт
 ### Лабуть Эвелина БПИ218
+## Про само приложение 
+Приложение представляет собой Web Application, написанное на языке программирования С# 6.0 с использованием фреймворка ASP.NET Core.
+Написано приложение было в среде разработки Rider.
+Функционал микросервисов демонстрируется с помощью Swagger UI.
+## Запуск 
+**Очень важно 
+По условию задания JWT token в базе данных "session" имеет тип VARCHAR(255), однако этот тип данных не позволяет передать в токен claim с ролью пользователя, что в дальнейшем необходимо для предоставления ему доступа к методам в контроллере Dish. Поэтому тип данных session_token в базе "session" необходимо заменить на VARCHAR(500), иначе не будет работать метод контроллера Login и, соответственно, нельзя будет авторизоваться.**
+
+
+
