--- a/Отчёт.md
+++ b/Отчёт.md
@@ -5,8 +5,8 @@
 Написано приложение было в среде разработки Rider.
 Функционал микросервисов демонстрируется с помощью Swagger UI.
 ## Запуск 
-**Очень важно  
-По условию задания JWT token в базе данных "session" имеет тип VARCHAR(255), однако этот тип данных не позволяет передать в токен claim с ролью пользователя, что в дальнейшем необходимо для предоставления ему доступа к методам в контроллере Dish. Поэтому тип данных session_token в базе "session" необходимо заменить на VARCHAR(500), иначе не будет работать метод контроллера Login и, соответственно, нельзя будет авторизоваться.**
+**Очень важно:  
+По условию задания JWT token в базе данных "session" имеет тип VARCHAR(255), однако этот тип данных не позволяет передать в токен claim  с ролью пользователя, что в дальнейшем необходимо для предоставления ему доступа к методам в контроллере Dish. Поэтому тип данных   session_token в базе "session" необходимо заменить на VARCHAR(500), иначе не будет работать метод контроллера Login и, соответственно,   нельзя будет авторизоваться.**
 
 
 
