--- a/Отчёт.md
+++ b/Отчёт.md
@@ -7,6 +7,6 @@
 ## Запуск 
 **Очень важно:  
 По условию задания JWT token в базе данных "session" имеет тип VARCHAR(255), однако этот тип данных не позволяет передать в токен claim  с ролью пользователя, что в дальнейшем необходимо для предоставления ему доступа к методам в контроллере Dish. Поэтому тип данных   session_token в базе "session" необходимо заменить на VARCHAR(500), иначе не будет работать метод контроллера Login и, соответственно,   нельзя будет авторизоваться.**
-
+Для подключения к БД необходимо в файле appsettings.json нужно заменить DefaultConnection на   "Host=*название_хоста*;Port=*порт*;Database=*название_БД*;Username=*имя_пользователя*;Password=*пароль*"
 
 
