--- a/Отчёт.md
+++ b/Отчёт.md
@@ -1,8 +1,7 @@
 # Отчёт
 ### Лабуть Эвелина БПИ218
-## Про само приложение 
-Приложение представляет собой Web Application, написанное на языке программирования С# 6.0 с использованием фреймворка ASP.NET Core.
-Написано приложение было в среде разработки Rider.
+## Про проект 
+Проект представляет собой Web Application, написанное на языке программирования С# 6.0 с использованием фреймворка ASP.NET Core в среде разработки Rider.
 Функционал микросервисов демонстрируется с помощью Swagger UI.
 ## Запуск 
 **Очень важно:  
