--- a/Отчёт.md
+++ b/Отчёт.md
@@ -8,6 +8,13 @@
 По условию задания JWT token в базе данных "session" имеет тип VARCHAR(255), однако этот тип данных не позволяет передать в токен claim  с ролью пользователя, что в дальнейшем необходимо для предоставления ему доступа к методам в контроллере Dish. Поэтому тип данных   session_token в базе "session" необходимо заменить на VARCHAR(500), иначе не будет работать метод контроллера Login и, соответственно,   нельзя будет авторизоваться.**  
 Для подключения к БД необходимо в файле appsettings.json нужно заменить DefaultConnection на   "Host=*название_хоста*;Port=*порт*;Database=*название_БД*;Username=*имя_пользователя*;Password=*пароль*"  
 После этого проект можно запускать.
+## Про контроллеры и методы 
+* ***Login*** - контроллер авторизации, содержит только POST-запрос  
+* ***Registration*** - контроллер регистрации, содержит только POST-запрос 
+* ***User*** - контроллер предоставления информации о пользователе, содержит только GET-запрос по токену (который пользователь получает при авторизации  
+* ***Menu*** - контроллер предоставления информации о меню, содержит только GET-запрос 
+* ***Order*** - контроллер предоставления информации о заказе, содержит GET-запрос по id заказа и POST-запрос (который возвращает id заказа)  
+*  ***Dish*** - контроллер блюда, содержит все 5 типов запросов (POST-запрос, GET-запрос, PUT-запрос, DELETE-запрос, GET-запрос по id)
 ## Атворизация в Swagger
 После успешной авторизации в Get-запросе Login возвращается токен:
 <img width="888" alt="Снимок экрана 2023-05-29 в 03 27 14" src="https://github.com/evelyn-lab/Restaurant_microservices/assets/86932751/acbcb9d4-48a1-47de-af2a-19626eb7ced8">  
